@@ -62,7 +62,7 @@ class BeanIterationResultSetHandlerTest {
                 });
         MockResultSet rs = createResultSet();
         Integer count = (Integer) handler.handle(rs);
-        assertEquals(new Integer(4), count);
+        assertEquals(Integer.valueOf(4), count);
         assertEquals(4, list.size());
 
         AaaDto dto = list.get(0);
@@ -103,7 +103,7 @@ class BeanIterationResultSetHandlerTest {
                 });
         MockResultSet rs = createResultSet();
         Integer count = (Integer) handler.handle(rs);
-        assertEquals(new Integer(2), count);
+        assertEquals(Integer.valueOf(2), count);
         assertEquals(2, list.size());
 
         AaaDto dto = list.get(0);
@@ -139,7 +139,7 @@ class BeanIterationResultSetHandlerTest {
                 });
         MockResultSet rs = createResultSet();
         Integer count = (Integer) handler.handle(rs);
-        assertEquals(new Integer(2), count);
+        assertEquals(Integer.valueOf(2), count);
         assertEquals(2, list.size());
 
         AaaDto dto = list.get(0);
